# Pi-H1-Linux-SDK

./: .gitattributes  .gitcontent  README.md  commit.template  install_build_env.sh  setup-environment
layers/meta-qcom-distro/: set_bb_env.sh
layers/meta-qcom-distro/classes/: ql_prebuilt.bbclass
layers/meta-qcom-distro/conf/: bblayers.conf  local.conf
layers/meta-qcom-hwe/classes/: qlprebuilt.bbclass  qmodule.bbclass
layers/meta-qt5/conf/: layer.conf
layers/meta-qt5/recipes-qt/qt5/: qt5.inc  (+29 more)
layers/meta-quectel/conf/: layer.conf
quectel_build/: a_key_generation.sh  do_image_package.sh
quectel_build/compile/: build.sh  config_parser.py  export_sdk.sh  setup_sdk.sh_template  version_parser.py  version_parser_auto.py
quectel_build/compile/quectel-features-config/: quectel-buildconfig-gen.h  quectel-feature.h  quectel_var.inc
quectel_build/config/: quectel_project.conf
quectel_build/packaged_file/bootbinaries/: XblRamdump.elf  aop.mbn  cpucp.elf  devcfg.mbn  hypvm.mbn  imagefv.elf  multi_image.mbn  shrm.elf  tools.fv  tz.mbn  uefi.elf  uefi_sec.mbn  xbl.elf  xbl_config.elf  xbl_config_gunyah.elf
quectel_build/packaged_file/firehose/: prog_firehose_Qcm6490_ddr.elf
quectel_build/packaged_file/partition/: partition_emmc.xml  partition_ufs.xml
sources/quectel-src/camera-devicetree/: qcm6490-camera-idp.dtso  qcm6490-camera-rb3.dtso
sources/quectel-src/graphics-devicetree/: Makefile
sources/quectel-src/tests/: dri-test.c  ql-test-uart.py
src/devicetree/: git.sh
src/files/tests/: CMakeLists.txt  generate-input.h-labels.sh  getevent.c  i2c-test.c
(+501 files in other folders)
